Added support for custom package