@@ -133,7 +133,7 @@
                     <nohelp>true</nohelp>
                     <outputDirectory>${project.build.directory}/docs</outputDirectory>
                 </configuration>
-              </plugin>
+            </plugin>
         </plugins>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
@@ -142,8 +142,12 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.15.0</version>
                     <configuration>
-                        <source>21</source>
-                        <target>21</target>
+                        <compilerArgs>
+                            <arg>--add-exports</arg>
+                            <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+                        </compilerArgs>
+                        <source>17</source>
+                        <target>17</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
